# MOSSKits

./: .gitignore  CLAUDE.md  CloudKit.md  LICENSE  README.md
CloudKit/: CloudKit.md
CloudKit/demo/: README.md  deploy.sh
CloudKit/demo/api/: wrangler.toml
CloudKit/demo/api/src/: index.ts
CloudKit/demo/portal/: index.html
CloudKit/demo/portal/src/: App.tsx  styles.css
EvalKit/: CLAUDE.md  EvalKit.md  EvalKit.v1.1.md  README.md
Infra/: ClaudeAgent.md  Cloudflare.md  Modal.md  Tinker.md
PhysicsKit/: PhysicsKit.md
PhysicsKit/demo/: README.md  pyproject.toml  requirements.txt
PhysicsKit/demo/examples/: drift_demo.py  tire_curves.py
PhysicsKit/demo/physicskit/: __init__.py  __main__.py
PhysicsKit/demo/physicskit/config/: __init__.py  tire_presets.py  vehicle_presets.py
PhysicsKit/demo/physicskit/core/: __init__.py  integrators.py  rigid_body.py  vector.py  world.py
PhysicsKit/demo/physicskit/drift/: __init__.py  detection.py  metrics.py
PhysicsKit/demo/physicskit/tire/: __init__.py  combined.py  pacejka.py  relaxation.py  slip.py  tire.py
PhysicsKit/demo/physicskit/vehicle/: __init__.py  car.py  drivetrain.py  handbrake.py  steering.py  suspension.py
PhysicsKit/demo/physicskit/visualization/: __init__.py  plotter.py  renderer.py
PunditKit/: PunditKit.md  README.md  Untitled  deploy.sh
PunditKit/demo/agent/: package-lock.json  package.json  phoenix-migrate.sql  schema.sql  wrangler.toml
PunditKit/demo/agent/src/: index.ts  types.ts
PunditKit/demo/portal/: components.json  index.html  package-lock.json  package.json  tailwind.config.js
PunditKit/experimental/: PunditKit.v1.1.md  PunditKit.v1.5.md
PunditKit/working-docs/: 2025-12-11-session.md
api/: package-lock.json  package.json  schema.sql  tsconfig.json
portal/: package-lock.json  package.json
(+9 files in other folders)
