[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physicskit"
version = "0.1.0"
description = "Multi-body physics simulation with non-linear tire physics for car drifting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MOSS", email = "hello@mosskits.com"}
]
keywords = ["physics", "simulation", "tire", "pacejka", "drifting", "vehicle dynamics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "numpy>=1.21.0",
]

[project.optional-dependencies]
viz = [
    "pygame>=2.0.0",
    "matplotlib>=3.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
all = [
    "physicskit[viz,dev]",
]

[project.scripts]
physicskit = "physicskit.__main__:main"

[project.urls]
Homepage = "https://mosskits.com"
Repository = "https://github.com/dcarmitage/MOSSKits"

[tool.setuptools.packages.find]
where = ["."]
include = ["physicskit*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
